app/src/main/jni/sdk/inc/sdkemvbase.h

extern s32 sdkEMVBaseSetRevocationKey(s32(*fun_cmprevocation)(u8 *key));