app/src/main/java/com/szzt/emvtest/TestLibrary.java


    int sdkBcdAdd(byte [] pbcDest, byte pbcSrc1[], int siBcdSrc1len, byte [] pbcSrc2, int siBcdSrc2len);
    public interface sdkJcbSetDispRemoveCard_fun_setdispremovecard_callback extends Callback {
        int apply();
    };
    /** <i>native declaration : line 6</i> */
    public interface sdkJcbSetBeforeGPO_fun_setbeforegpo_callback extends Callback {
        int apply();
    };
    /** <i>native declaration : line 7</i> */
    public interface sdkJcbSetVerifyCardNo_fun_setVerifyCardNo_callback extends Callback {
        int apply(Pointer asPAN);
    };
    /** <i>native declaration : line 9</i> */
    public interface sdkJcbSetRevocationKey_fun_cmprevocation_callback extends Callback {
        int apply(Pointer key);
    };
    /** <i>native declaration : line 12</i> */
    public interface sdkJcbSetDispTapCardAgain_fun_setDispTapCardAgain_callback extends Callback {
        int apply();
    };
    /**
     * Original signature : <code>int sdkJcbTransInit()</code><br>
     * <i>native declaration : line 2</i>
     */
    int sdkJcbTransInit();
    /**
     * Original signature : <code>int sdkJcbTransFlow1()</code><br>
     * <i>native declaration : line 3</i>
     */
    int sdkJcbTransFlow1();
    /**
     * Original signature : <code>int sdkJcbTransFlow2()</code><br>
     * <i>native declaration : line 4</i>
     */
    int sdkJcbTransFlow2();
    /**
     * fun_setdispremovecard\ufffd\ufffd\ufffd\ufffd\u05b5:SDK_OK:\ufffd\u0279\ufffd; SDK_ERR:\u02a7\ufffd\ufffd<br>
     * Original signature : <code>int sdkJcbSetDispRemoveCard(sdkJcbSetDispRemoveCard_fun_setdispremovecard_callback*)</code><br>
     * @param fun_setdispremovecard fun_setdispremovecard\ufffd\ufffd\ufffd\ufffd\u05b5:SDK_OK:\ufffd\u0279\ufffd; SDK_ERR:\u02a7\ufffd\ufffd<br>
     * <i>native declaration : line 5</i>
     */
    int sdkJcbSetDispRemoveCard(TestLibrary.sdkJcbSetDispRemoveCard_fun_setdispremovecard_callback fun_setdispremovecard);
    /**
     * fun_setbeforegpo\ufffd\ufffd\ufffd\ufffd\u05b5:SDK_OK:\ufffd\u0279\ufffd; SDK_ERR:\u02a7\ufffd\ufffd<br>
     * Original signature : <code>int sdkJcbSetBeforeGPO(sdkJcbSetBeforeGPO_fun_setbeforegpo_callback*)</code><br>
     * @param fun_setbeforegpo fun_setbeforegpo\ufffd\ufffd\ufffd\ufffd\u05b5:SDK_OK:\ufffd\u0279\ufffd; SDK_ERR:\u02a7\ufffd\ufffd<br>
     * <i>native declaration : line 6</i>
     */
    int sdkJcbSetBeforeGPO(TestLibrary.sdkJcbSetBeforeGPO_fun_setbeforegpo_callback fun_setbeforegpo);
    /**
     * fun_setVerifyCardNo\ufffd\ufffd\ufffd\ufffd\u05b5:SDK_OK:\ufffd\u0279\ufffd; SDK_ERR:\u02a7\ufffd\ufffd<br>
     * Original signature : <code>int sdkJcbSetVerifyCardNo(sdkJcbSetVerifyCardNo_fun_setVerifyCardNo_callback*)</code><br>
     * @param fun_setVerifyCardNo fun_setVerifyCardNo\ufffd\ufffd\ufffd\ufffd\u05b5:SDK_OK:\ufffd\u0279\ufffd; SDK_ERR:\u02a7\ufffd\ufffd<br>
     * <i>native declaration : line 7</i>
     */
    int sdkJcbSetVerifyCardNo(TestLibrary.sdkJcbSetVerifyCardNo_fun_setVerifyCardNo_callback fun_setVerifyCardNo);
    /**
     * Original signature : <code>int sdkJcbGetTransMode()</code><br>
     * <i>native declaration : line 8</i>
     */
    int sdkJcbGetTransMode();
    /**
     * Original signature : <code>int sdkJcbSetRevocationKey(sdkJcbSetRevocationKey_fun_cmprevocation_callback*)</code><br>
     * <i>native declaration : line 9</i>
     */
    int sdkJcbSetRevocationKey(TestLibrary.sdkJcbSetRevocationKey_fun_cmprevocation_callback fun_cmprevocation);
    /**
     * Original signature : <code>int sdkJcbSetForceOnline(bool)</code><br>
     * <i>native declaration : line 10</i>
     */
    int sdkJcbSetForceOnline(byte bIsForceOnline);
    /**
     * Original signature : <code>int sdkJcbImportOnlineResult(int, const unsigned char*)</code><br>
     * <i>native declaration : line 11</i><br>
     * @deprecated use the safer methods {@link #sdkJcbImportOnlineResult(int, byte[])} and {@link #sdkJcbImportOnlineResult(int, com.sun.jna.Pointer)} instead
     */
    @Deprecated
    int sdkJcbImportOnlineResult(int ucOnlineResult, Pointer pheRspCode);
    /**
     * Original signature : <code>int sdkJcbImportOnlineResult(int, const unsigned char*)</code><br>
     * <i>native declaration : line 11</i>
     */
    int sdkJcbImportOnlineResult(int ucOnlineResult, byte pheRspCode[]);
    /**
     * fun_setDispTapCardAgain\ufffd\ufffd\u02be\ufffd\ufffd\ufffd\ufffd\ufffd,\u023b\ufffd\ufffd\u03bb: SDK_OK:\ufffd\u0279\ufffd; SDK_ERR:\u02a7\ufffd\ufffd<br>
     * Original signature : <code>int sdkJcbSetDispTapCardAgain(sdkJcbSetDispTapCardAgain_fun_setDispTapCardAgain_callback*)</code><br>
     * @param fun_setDispTapCardAgain fun_setDispTapCardAgain\ufffd\ufffd\u02be\ufffd\ufffd\ufffd\ufffd\ufffd,\u023b\ufffd\ufffd\u03bb: SDK_OK:\ufffd\u0279\ufffd; SDK_ERR:\u02a7\ufffd\ufffd<br>
     * <i>native declaration : line 12</i>
     */
    int sdkJcbSetDispTapCardAgain(TestLibrary.sdkJcbSetDispTapCardAgain_fun_setDispTapCardAgain_callback fun_setDispTapCardAgain);
    /**
     * Original signature : <code>int sdkJcbSetOption(unsigned char)</code><br>
     * <i>native declaration : line 13</i>
     */
    int sdkJcbSetOption(byte option);
    /**
     * Original signature : <code>int sdkJcbSetStatic9F53(unsigned char*)</code><br>
     * <i>native declaration : line 14</i><br>
     * @deprecated use the safer methods {@link #sdkJcbSetStatic9F53(java.nio.ByteBuffer)} and {@link #sdkJcbSetStatic9F53(com.sun.jna.Pointer)} instead
     */
    @Deprecated
    int sdkJcbSetStatic9F53(Pointer data);
    /**
     * Original signature : <code>int sdkJcbSetStatic9F53(unsigned char*)</code><br>
     * <i>native declaration : line 14</i>
     */
    int sdkJcbSetStatic9F53(ByteBuffer data);
    /**
     * Original signature : <code>int sdkJcbGetStatic9F53(unsigned char*)</code><br>
     * <i>native declaration : line 15</i><br>
     * @deprecated use the safer methods {@link #sdkJcbGetStatic9F53(java.nio.ByteBuffer)} and {@link #sdkJcbGetStatic9F53(com.sun.jna.Pointer)} instead
     */
    @Deprecated
    int sdkJcbGetStatic9F53(Pointer data);
    /**
     * Original signature : <code>int sdkJcbGetStatic9F53(unsigned char*)</code><br>
     * <i>native declaration : line 15</i>
     */
    int sdkJcbGetStatic9F53(ByteBuffer data);
    /**
     * Original signature : <code>int sdkJcbTransReadAppData()</code><br>
     * <i>native declaration : line 16</i>
     */
    int sdkJcbTransReadAppData();
}



